--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "express-session": "^1.18.2",
     "joi": "^18.0.1",
     "method-override": "^3.0.0",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^9.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
